--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ permissions:
 
 jobs:
   release:
-    uses: activadee/codex-shared-workflows/.github/workflows/release.yml@main
+    uses: activadee/codex-shared-workflows/workflows/release.yml@main
     secrets: inherit
     with:
       tag_name: ${{ inputs.tag_name }}
